# python-poetry-example

./: .dockerignore  .flake8  README.md  pyproject.toml
app/: .env.tmpl  main.py
app/models/: people.py
app/services/: receiver.py
docker/: Dockerfile
