[tool.poetry]
name = "python-poetry-example"
version = "0.1.0"
description = ""
authors = ["Minghao Pan <mpan2@slb.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true
exclude = "(venv|.tox|.eggs|.mypy_cache|.pytest_cache|.cache|.idea|.vscode|.git|build|dist)"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
line-length = 120
skip-string-normalization = true
skip-magic-trailing-comma = true
exclude = "(venv|.tox|.eggs|.mypy_cache|.pytest_cache|.cache|.idea|.vscode|.git|build|dist)"

[tool.isort]
profile = "black"
line_length = 120 