[tool.poetry]
name = "python-poetry-example"
version = "0.1.0"
description = ""
authors = ["Minghao Pan <mpan2@slb.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^1.10.7"
alchemist-event-hub = { version = "0.2.12", source = "alchemist-python-shared" }

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.0"
pre-commit = "^3.2.2"

[[tool.poetry.source]]
name = "alchemist-python-shared"
url = "https://pkgs.dev.azure.com/slb-swt/Cybertron/_packaging/alchemist-python-shared/pypi/simple/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true
exclude = "(venv|.tox|.eggs|.mypy_cache|.pytest_cache|.cache|.idea|.vscode|.git|build|dist)"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_errors = true   # azure event hub has typing issues

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
line-length = 120
skip-string-normalization = true
skip-magic-trailing-comma = true
exclude = "(venv|.tox|.eggs|.mypy_cache|.pytest_cache|.cache|.idea|.vscode|.git|build|dist)"

[tool.isort]
profile = "black"
line_length = 120 